Updated Personal Info [Resigned]

--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-8">
             <h1 class="mt-5">Harshit</h1>
-            <h8>Engineer</h8><br>
-            <h8>Product Intelligence | System S/W</h8><br>
+            <h8>Incoming Graduate Student | Stony Brook University</h8><br>
+            <h8>Engineer | Product Intelligence</h8><br>
             <h8>Samsung R&D Institute Delhi</h8><br>
-
+            <!-- <h8></h8><br> -->
+            <h8>
+              <i class="fa fa-envelope"></i>
+              <!-- <a href="#"> -->
+                <span>harshit[DOT]1[AT]samsung[DOT]com</span>
+              <!-- </a> -->
+            </h8><br>
             <h8>
               <i class="fa fa-envelope"></i>
               <!-- <a href="#"> -->
@@ -80,28 +86,17 @@
               <!-- </a> -->
             </h8><br>
             <h8>
-              <i class="fa fa-envelope"></i>
-              <!-- <a href="#"> -->
-                <span>harshit[DOT]1[AT]samsung[DOT]com</span>
-              <!-- </a> -->
-            </h8><br>
-            <h8>
               <i class="fab fa-linkedin"></i>
               <a target="_blank" href="https://www.linkedin.com/in/harshit-singh-51b67882">
-                <span>Harshit Singh</span>
+                <span>Harshit</span>
               </a>
               |
-              <i class="fab fa-facebook"></i>
-              <a target="_blank" href="https://www.facebook.com/13.harshit">
-                <span>Harshit Singh</span>
-              </a>
-            </h8><br>
-            <h8>
               <i class="fab fa-github"></i>
               <a target="_blank" href="https://github.com/harshit13">
                 <span>harshit13</span>
               </a>
-              |
+            </h8><br>
+            <h8>
               <i class="fab fa-kaggle"></i>
               <a target="_blank" href="https://www.kaggle.com/harshit1395">
                 <span>harshit1395</span>
@@ -124,14 +119,14 @@
         <div class="row" style="margin-top: 2%">
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
-              <p>I am a technology enthusiast, with deep interests in Machine Vision, Reinforcement Learning, Time Series Data Analysis, Data Science and Machine Learning. I have done my bachelors in Computer Science and Engineering from IIT Patna and currently work for Product Intelligence at Samsung. I have worked on enumeration of projects in the field of Computer Science and have gained adequate research and professional experience.</p>
+              <p>I am a technology enthusiast, with deep interests in Machine Vision, Reinforcement Learning, Time Series Data Analysis, Data Science and Machine Learning. I have done my bachelors in Computer Science from IIT Patna and currently work for Product Intelligence at Samsung. I have worked on enumeration of projects in the field of Computer Science and have gained adequate research and professional experience. I will be joining <font color="red">Stony Brook University</font> NY for masters in Computer Science by Fall 2019.</p>
           </div>
           <div class="col-lg-1"></div>
         </div>
         <div class="row">
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
-              <p>At <a target="_blank" href="https://research.samsung.com/sri-d">Samsung</a>, I work with Product Intelligence team which is responsible to develop and enhance Tizen Operating System for Samsung DTV Platform. I am responsible for developing software tools to analyze product performances, memory profiling, system performances tasks and automation of routine tasks. I also work on Big Data, produce analytics that influence proactive product decisions and monitor timelines of different product models via Machine Learning models.</p>
+              <p>At <a target="_blank" href="https://research.samsung.com/sri-d">Samsung</a>, I worked with Product Intelligence team which is responsible to develop and enhance Tizen Operating System for Samsung DTV Platform. I was responsible for developing software tools to analyze product performances, memory profiling, system performances tasks and automation of routine tasks. I also worked on Big Data, produce analytics that influence proactive product decisions and monitor timelines of different products via Machine Learning models. I played key role in the setup of Memory and Performance Task Force for Product Intelligence team.</p>
           </div>
           <div class="col-lg-1"></div>
         </div>
