Update School Information

--- a/experience.html
+++ b/experience.html
@@ -68,8 +68,8 @@
         </div>
         <div class="col-md-9">
           <h4>Samsung R&D Institute India - Delhi</h4>
-          <h5>Engineer</h5>
-          <p>I work in Product Intelligence, responsible for commercialization of Samsung Televisions. I am responsible for developing software for analyzing product performances, memory profiling, system performances tasks and automation of routine tasks. For intelligence part, I work on Big Data, produce analytics influencing proactive product decisions and monitoring timelines of different product models via Machine Learning models. </p>
+          <h5>Engineer I</h5>
+          <p><b>[2017 - 2019]</b> I worked at Product Intelligence team, responsible for monitoring commercialization of Samsung Televisions. I was responsible for developing software tools for analyzing product performances, memory profiling, system performances tasks. For intelligence part, I worked on Big Data, produce analytics influencing proactive product decisions and monitoring timelines of different product models via Machine Learning models. I played a key role in the setup of Memory and Performance task force for profiling Tizen OS.</p>
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
@@ -87,7 +87,7 @@
         <div class="col-md-9">
           <h4>Nanyang Technological University</h4>
           <h5>Research Internship</h5>
-          <p>I worked at the HESL lab, under Prof Vinod A Prasad, on brain computer interface using EEG as passwords. I used brain EEG signals (collected via EMOTIV EPOC headset using C# interface) in response to visual and audio stimuli as the password for a subject and obtained deterministic features via signal filters on EEG signals and used correlation metrics on power spectrum of signals. Experiments provided an acceptance rate of around 80%. This was published at 2016 IEEE EMBS Conference on Biomedical Engineering and Sciences (IECBES).</p>
+          <p><b>[2016]</b> I worked at the HESL lab, under Prof Vinod A Prasad, on brain computer interface using EEG as passwords. I used brain EEG signals (collected via EMOTIV EPOC headset using C# interface) in response to visual and audio stimuli as the password for a subject and obtained deterministic features via signal filters on EEG signals and used correlation metrics on power spectrum of signals. Experiments provided an acceptance rate of around 80%. This was published at 2016 IEEE EMBS Conference on Biomedical Engineering and Sciences (IECBES).</p>
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
@@ -105,7 +105,7 @@
         <div class="col-md-9">
           <h4>Indian Institute of Technology (IIT) Kharagpur </h4>
           <h5>Research Internship</h5>
-          <p>I worked at the CNeRG lab, under Dr Niloy Ganguly and with Dr Abir De, to work on EPS graphs generated via MATLAB. to format these EPS graphs (each graph consists of 1500 – 2000 lines) using file I/O.  The module developed using python and bash, was capable of resizing, shifting legends, scaling, changing dimensions of the graphs.</p>
+          <p><b>[2015]</b> I worked at the CNeRG lab, under Dr Niloy Ganguly and with Dr Abir De, to work on EPS graphs generated via MATLAB. to format these EPS graphs (each graph consists of 1500 – 2000 lines) using file I/O.  The module developed using python and bash, was capable of resizing, shifting legends, scaling, changing dimensions of the graphs.</p>
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
