--- a/index.html
+++ b/index.html
@@ -63,16 +63,8 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-8">
             <h1 class="mt-5">Harshit</h1>
-            <h8>Incoming Graduate Student | Stony Brook University</h8><br>
-            <h8>Engineer | Product Intelligence</h8><br>
-            <h8>Samsung R&D Institute Delhi</h8><br>
-            <!-- <h8></h8><br> -->
-            <h8>
-              <i class="fa fa-envelope"></i>
-              <!-- <a href="#"> -->
-                <span>harshit[DOT]1[AT]samsung[DOT]com</span>
-              <!-- </a> -->
-            </h8><br>
+            <h8>Graduate Student | CS - Stony Brook University</h8><br>
+            <h8>Ex - Samsung [SRI Delhi]</h8><br>
             <h8>
               <i class="fa fa-envelope"></i>
               <!-- <a href="#"> -->
@@ -87,7 +79,7 @@
             </h8><br>
             <h8>
               <i class="fab fa-linkedin"></i>
-              <a target="_blank" href="https://www.linkedin.com/in/harshit-singh-51b67882">
+              <a target="_blank" href="https://www.linkedin.com/in/harshit-51b67882/">
                 <span>Harshit</span>
               </a>
               |
@@ -119,7 +111,7 @@
         <div class="row" style="margin-top: 2%">
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
-              <p>I am a technology enthusiast, with deep interests in Machine Vision, Reinforcement Learning, Time Series Data Analysis, Data Science and Machine Learning. I have done my bachelors in Computer Science from IIT Patna and currently work for Product Intelligence at Samsung. I have worked on enumeration of projects in the field of Computer Science and have gained adequate research and professional experience. I will be joining <font color="red">Stony Brook University</font> NY for masters in Computer Science by Fall 2019.</p>
+              <p>I am a technology enthusiast, with deep interests in Machine Vision, Reinforcement Learning, Time Series Data Analysis, Data Science and Machine Learning. I have done my bachelors in Computer Science from IIT Patna and worked for Product Intelligence at Samsung. I have worked on enumeration of projects in the field of Computer Science and have gained adequate research and professional experience. I am currently pursuing Masters in Computer Science at <font color="red">Stony Brook University</font>, NY (Batch 2019-21).</p>
           </div>
           <div class="col-lg-1"></div>
         </div>
