--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="col-lg-8">
             <h1 class="mt-5">Harshit</h1>
             <h8>Graduate Student | CS - Stony Brook University</h8><br>
-            <h8>Ex - Samsung [SRI Delhi]</h8><br>
+            <h8>Ex - Samsung [SRI Delhi] | Ex - IIT Patna</h8><br>
             <h8>
               <i class="fa fa-envelope"></i>
               <!-- <a href="#"> -->
