Updated contact information

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h8>
               <i class="fa fa-envelope"></i>
               <!-- <a href="#"> -->
-                <span>hharshit[AT]cs.stonybrook[DOT]edu</span>
+                <span>hharshit[AT]cs[DOT]stonybrook[DOT]edu</span>
               <!-- </a> -->
             </h8><br>
             <h8>
