Added Google scholar link

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
               <a target="_blank" href="https://www.kaggle.com/harshit1395">
                 <span>harshit1395</span>
               </a>
+              |
+              <!-- <i class="fab fa-google-scholar"></i> -->
+              <a target="_blank" href="https://scholar.google.co.in/citations?user=Ip7tNaMAAAAJ&hl=en">
+                <span style="color:blue">Google Scholar</span>
+              </a>
             </h8><br>
             
           </div>
