--- a/experience.html
+++ b/experience.html
@@ -67,7 +67,7 @@
           </a>
         </div>
         <div class="col-md-9">
-          <h4>Samsung R&D Institute India - Delhi</h4>
+          <h4>Samsung Research | SRI-Delhi</h4>
           <h5>Engineer I</h5>
           <p><b>[2017 - 2019]</b> I worked at Product Intelligence team, responsible for monitoring commercialization of Samsung Televisions. I was responsible for developing software tools for analyzing product performances, memory profiling, system performances tasks. For intelligence part, I worked on Big Data, produce analytics influencing proactive product decisions and monitoring timelines of different product models via Machine Learning models. I played a key role in the setup of Memory and Performance task force for profiling Tizen OS.</p>
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
