Reducing resume workex content and increasing projects. Relocating publication section

--- a/experience.html
+++ b/experience.html
@@ -167,12 +167,12 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <!-- <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Harshit</p>
       </div>
       <!-- /.container -->
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
