--- a/experience.html
+++ b/experience.html
@@ -172,7 +172,7 @@
         <p class="m-0 text-center text-white">Copyright &copy; Harshit</p>
       </div>
       <!-- /.container -->
-    </footer> -->
+    <!-- </footer> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
