Updating recent buildsys 19 info

--- a/publications.html
+++ b/publications.html
@@ -109,6 +109,24 @@
           </a>
         </div>
         <div class="col-md-11">
+          <h5>Coordinated Scheduling of Residential Appliances and Heterogenous Energy Sources in a Smart Microgrid</h5>
+          <!-- <h6> <b>Harshit</b>, Don Dennis, Karan Jakhar, Prashant Baghel</h6> -->
+          <h7><i>BuildSys 2019 Madness Session and Poster Presentation</i></h7> 
+          <!-- <h7><i>Runner-up in ISED Grand Challenge </i></h7>  -->
+          <p><a href="static/BUILDSYS_19.pdf">[PDF]</a></p>
+          <!--<a class="btn btn-primary" href="#">View Project</a>-->
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-md-1">
+          <a href="#">
+            <!-- <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt=""> -->
+          </a>
+        </div>
+        <div class="col-md-11">
           <h5>Lecture Assistant: Federated Human Tracking for Multi-angle Videography</h5>
           <h6> <b>Harshit</b>, Don Dennis, Karan Jakhar, Prashant Baghel</h6>
           <h7><i>Demo at International Symposium on Embedded Computing and System Design (ISED), 2016. </i></h7> 
