--- a/experience.html
+++ b/experience.html
@@ -118,24 +118,24 @@
       </h2>
 
       <!-- Project Four -->
-      <!--
       <div class="row">
 
-        <div class="col-md-7">
+        <div class="col-md-3">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="https://www.stonybrook.edu/far-beyond/img/branding/logo/sbu/primary/300/stony-brook-university-logo-horizontal-300.png" alt="">
           </a>
         </div>
-        <div class="col-md-5">
-          <h3>Project Four</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+        <div class="col-md-9">
+          <!-- <h3>Project Four</h3> -->
+          <h4>Stony Brook University</h4>
+          <h5>Graduate Teaching Assistant</h5>
+          <p><b>[Fall 19]</b>CSE214, Data Structures</p>
+          <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
-      -->
       <!-- /.row -->
 
-      <hr>
+      <!-- <hr> -->
 
       <!-- Pagination -->
       <!--
