--- a/experience.html
+++ b/experience.html
@@ -129,13 +129,13 @@
           <!-- <h3>Project Four</h3> -->
           <h4>Stony Brook University</h4>
           <h5>Graduate Teaching Assistant</h5>
-          <p><b>[Fall 19]</b>CSE214, Data Structures</p>
+          <p><b>[Fall 19]</b> CSE214, Data Structures</p>
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
       <!-- /.row -->
 
-      <!-- <hr> -->
+      <hr>
 
       <!-- Pagination -->
       <!--
@@ -167,12 +167,12 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <!-- <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Harshit</p>
       </div>
+    </footer>
       <!-- /.container -->
-    <!-- </footer> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
