--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,21 @@
       <h2 class="my-4">Research Projects
         <small></small>
       </h2>
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-2">
+          <a target="_blank" href="https://raft.github.io/">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="static/raft.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-10">
+          <h5>Sharded Replicated KeyValue Store</h5>
+          <p>Implemented a key value store replicated across multiple machines with RAFT consensus for fault tolerance. The system also used sharding and snapshots for performance. Client sent their requests to KV Server. KV Servers requested raft server for replication, when applied, they replied to client for consistency. This project was developed in GO.</p>
+          <!-- <a class="btn btn-primary" href="#">View Project</a> -->
+        </div>
+      </div>
+      <!-- /.row -->
+      <hr>
 
       <!-- Project One -->
       <div class="row">
