Adding new Projects

--- a/projects.html
+++ b/projects.html
@@ -55,9 +55,39 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h2 class="my-4">Research Projects
+      <h2 class="my-4">Research and Personal Projects
         <small></small>
       </h2>
+
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-2">
+          <a target="_blank" href="https://github.com/harshit13/ed_feedback_mining">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="static/bigdata.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-10">
+          <h5>Mining School Surveys for Quality Education </h5>
+          <p> Conducted Multi-Hypothesis test , to find significance of feedback information from students (20 GB data). Found clusters of area codes based on feedbacks via Locality Sensitive Hashing using Spark+HDFS. Train models on feedbacks via Deep Learing using Tensorflow Distributed Training. Cross nation area codes belonged to same clusters with Jaccard Similarity of 0.80.</p>
+          <!-- <a class="btn btn-primary" href="#">View Project</a> -->
+        </div>
+      </div>
+
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-2">
+          <a target="_blank" href="https://github.com/harshit13/covid19-viz">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="static/covid.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-10">
+          <h5>Covid-19 Vizualization</h5>
+          <p> Developed a dashboard with Map visualization to show COVID-19 statistics for each country using color-maps. Used parallel coordinate and radar chart to show trends between health expenses, population density and covid-19 stats. Technology used - d3.js, Flask, Bootstrap, jQuery</p>
+          <!-- <a class="btn btn-primary" href="#">View Project</a> -->
+        </div>
+      </div>
+      <!-- /.row -->
+      <hr>
       <!-- Project One -->
       <div class="row">
         <div class="col-md-2">
@@ -77,7 +107,7 @@
       <!-- Project One -->
       <div class="row">
         <div class="col-md-2">
-          <a target="_blank" href="https://github.com/harshit13/QL/tree/master/CopterQL">
+          <a target="_blank" href="https://github.com/harshit13/QL">
             <img class="img-fluid rounded mb-3 mb-md-0" src="static/game_out.gif" alt="">
           </a>
         </div>
