--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
         <div class="row">
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
+              <p>At Stony Brook, I work with Prof. <a target="_blank" href="https://www3.cs.stonybrook.edu/~hling/">Haibin Ling</a>. My work focuses on object tracking on UAV video sequenses. Unlike general trackers, UAV sequences supports bird-eye view and need different strategies to mitigate the challenges. I also worked with <a href="http://hengfan.byethost7.com/?ckattempt=1">Heng Fan</a> on building the object tracking dataset LaSOT.</p>
+          </div>
+          <div class="col-lg-1"></div>
+        </div>
+        <div class="row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-10">
               <p>At <a target="_blank" href="https://research.samsung.com/sri-d">Samsung</a>, I worked with Product Intelligence team which is responsible to develop and enhance Tizen Operating System for Samsung DTV Platform. I was responsible for developing software tools to analyze product performances, memory profiling, system performances tasks and automation of routine tasks. I also worked on Big Data, produce analytics that influence proactive product decisions and monitor timelines of different products via Machine Learning models. I played key role in the setup of Memory and Performance Task Force for Product Intelligence team.</p>
           </div>
           <div class="col-lg-1"></div>
