Adding missing <hr> in projects

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h2 class="my-4">Research and Personal Projects
+      <h2 class="my-4">Personal Projects
         <small></small>
       </h2>
 
@@ -72,6 +72,7 @@
           <!-- <a class="btn btn-primary" href="#">View Project</a> -->
         </div>
       </div>
+      <hr>
 
       <!-- Project One -->
       <div class="row">
