--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,25 @@
           </a>
         </div>
         <div class="col-md-11">
+          <h5>LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</h5>
+          <h6> Heng Fan, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, <b>Harshit</b>, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, Haibin Ling</h6>
+          <h7><i>International Journal of Computer Vision</i></h7> 
+          <p><a href="static/IJCV_20.pdf">[PDF]</a> <a href="https://arxiv.org/abs/2009.03465">[Link]</a></p>
+          <!--<a class="btn btn-primary" href="#">View Project</a>-->
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-1">
+          <a href="#">
+            <!-- <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt=""> -->
+          </a>
+        </div>
+        <div class="col-md-11">
           <h5>Online Electroencephalogram (EEG) based biometric authentication using visual and audio stimuli</h5>
           <h6> <b>Harshit</b>, Rajbir Singh, Kavitha P Thomas, K. G. Smitha, A. Prasad Vinod</h6>
           <h7><i>2016 IEEE EMBS Conference on Biomedical Engineering and Sciences (IECBES)(2016), Malaysia: 454-459.</i></h7> 
