Updating journal details for LaSOT

--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
         <div class="col-md-11">
           <h5>LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</h5>
           <h6> Heng Fan, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, <b>Harshit</b>, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, Haibin Ling</h6>
-          <h7><i>International Journal of Computer Vision</i></h7> 
+          <h7><i>International Journal of Computer Vision (IJCV), 2020</i></h7> 
           <p><a href="static/IJCV_20.pdf">[PDF]</a> <a href="https://arxiv.org/abs/2009.03465">[Link]</a></p>
           <!--<a class="btn btn-primary" href="#">View Project</a>-->
         </div>
